[project]
name = 'asyncinotify'
dynamic = ['description', 'version']
readme = 'README.rst'
requires-python = '>= 3.6, < 4'
license = 'MPL-2.0'
keywords = [
    'async',
    'inotify',
]

classifiers=[
    'Development Status :: 6 - Mature',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers',
    'Framework :: AsyncIO',
]

[[project.authors]]
name = "Taylor C. Richberger"
email = "taylor.richberger@procern.com"

[project.urls]
repository  = 'https://github.com/ProCern/asyncinotify/'
documentation = 'https://asyncinotify.readthedocs.io/'

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.12,<4"]
